--- a/web/angular-wallet/src/app/layout/components/burst-recipient-input/burst-recipient-input.component.html
+++ b/web/angular-wallet/src/app/layout/components/burst-recipient-input/burst-recipient-input.component.html
@@ -5,7 +5,8 @@
            (ngModelChange)="applyRecipientType($event)"
            (blur)="validateRecipient()"
            name="recipient"
-           placeholder="{{ 'recipient' | i18n }}">
+           placeholder="{{ 'recipient' | i18n }}"
+           [disabled]="disabled">
 
     <div *ngIf="recipient.type!==1" class="recipient-address">{{ recipient.addressRS}}</div>
     <div fxFlex fxLayout="row"
@@ -18,5 +19,7 @@
         {{getValidationIcon()}}
       </mat-icon>
     </div>
+    <input #file type="file" accept="image/*" (change)="parseQR()" id="file" class="inputfile" capture="camera">
+    <label for="file" class="camera-icon"><mat-icon>camera_alt</mat-icon></label>
   </div>
 </mat-form-field>
