i18n punctuation for total amount (multi out)

--- a/web/angular-wallet/src/app/main/send-burst/send-multi-out-form/send-multi-out-form.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-multi-out-form/send-multi-out-form.component.html
@@ -73,7 +73,7 @@
     </button>
   </div>
 
-  <strong>Total:</strong> {{ getTotal() }} BURST -
+  <strong>Total:</strong> {{ getTotal()  | number: '1.0-6': this.language }} BURST -
   <a (click)="advanced=!advanced"><em>{{ advanced ? "basic" : "advanced" | i18n }}</em></a>
   <br/><br/>
 
