--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -28,10 +28,11 @@
        [ngClass]="fuseConfig.layout.navbar.secondaryBackground">
 
     <div class="h3 username">{{ selectedAccount.accountRS }}</div>
-    <div class="h5 alias hint-text mt-8" *ngIf="selectedAccount.type !== 'offline'" [matMenuTriggerFor]="menu">
+    <div class="h5 username">{{ getBalance() | number : '1.0-2' : this.language }} BURST</div>
+    <div class="h5 alias hint-text mt-4" *ngIf="selectedAccount.type !== 'offline'" [matMenuTriggerFor]="menu">
       <span>{{ getAccountName() }} <mat-icon>keyboard_arrow_down</mat-icon></span>
     </div>
-    <div class="h5 alias hint-text mt-8" *ngIf="selectedAccount.type === 'offline'">
+    <div class="h5 alias hint-text mt-4" *ngIf="selectedAccount.type === 'offline'">
       <span>{{'hint_offline_account' | i18n}}</span>
     </div>
     <div class="avatar-container fuse-navy-700">
