bunch of improvements, like check balance, show account info

--- a/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
@@ -68,7 +68,9 @@
     </button>
   </div>
 
-  <strong>Total:</strong> {{ getTotal() | number: '1.0-6': this.language }} BURST -
+
+  <strong>Total:&nbsp;</strong>
+  <span [class.no-balance]="!hasSufficientBalance()">{{ getTotal() | number: '1.0-6': this.language }} BURST</span> -
   <a (click)="advanced=!advanced"><em>{{ advanced ? "basic" : "advanced" | i18n }}</em></a>
 
 </form>
