--- a/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.scss
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.scss
@@ -7,6 +7,11 @@ form {
   margin: 20px 0;
 }
 
+.no-balance{
+  color: red;
+  font-weight: bold;
+}
+
 .send-button-wrapper {
   position: relative;
 
