--- a/web/angular-wallet/src/app/main/send-burst/send-multi-out-form/send-multi-out-form.component.scss
+++ b/web/angular-wallet/src/app/main/send-burst/send-multi-out-form/send-multi-out-form.component.scss
@@ -7,6 +7,11 @@ form {
     margin:20px 0;
 }
 
+.no-balance{
+  color: red;
+  font-weight: bold;
+}
+
 .recipients-item{
   display: flex;
   flex-direction: row;
