--- a/web/angular-wallet/src/app/main/send-burst/send-burst.component.scss
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst.component.scss
@@ -1,15 +1,25 @@
-.content-container {
-  position: relative;
-  display: flex;
-  flex: 1;
-  justify-content: center;
+@import "src/@fuse/scss/fuse";
 
-  .content {
-    max-width: 600px;
-    background: white;
-    border-radius: 8px;
-    height: fit-content;
-    width: 100%;
-    margin-top: 2em;
+:host {
+  .account-info {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    @include media-breakpoint('xs') {
+      flex-direction: column;
+      margin-top: 20px;
+      justify-content: normal;
+    }
+
+    &__field {
+      margin-right: 1em;
+
+      p {
+        font-size: 16px;
+        padding: 0;
+        margin: 0;
+      }
+    }
   }
 }
