--- a/lib/docstheme/default/layouts/default.hbs
+++ b/lib/docstheme/default/layouts/default.hbs
@@ -7,7 +7,7 @@
         | {{project.name}}{{/ifCond}}</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="{{relativeURL "assets/css/main.css"}}">
     <link rel="stylesheet" href="{{relativeURL "assets/css/custom.css"}}">
 </head>
