--- a/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.html
+++ b/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.html
@@ -34,7 +34,7 @@
 
     <mat-tab-group>
       <mat-tab label="{{ 'transactions' | i18n }}">
-        <app-transaction-table [dataSource]="dataSource"></app-transaction-table>
+        <app-transaction-table [dataSource]="dataSource" [account]="account"></app-transaction-table>
       </mat-tab>
       <mat-tab label="{{ 'assets' | i18n }}">
         <table>
