More on Dashboard Translations

--- a/web/angular-wallet/src/app/main/dashboard/balance-diagram/balance-diagram.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/balance-diagram/balance-diagram.component.html
@@ -26,9 +26,9 @@
   </div>
 
   <div class="controls">
-    <p class="font-size-14 secondary-text pr-16">Recent transactions since {{firstDate | date:'MMM d, y, h:mm:ss'}}</p>
+    <p class="font-size-14 secondary-text pr-16">{{"recent_transactions_since" | i18n}}&nbsp;{{firstDate | date:'MMM d, y, h:mm:ss'}}</p>
     <mat-form-field >
-      <mat-label>No. Transactions</mat-label>
+      <mat-label>{{"transactions" | i18n}}</mat-label>
       <mat-select [(value)]="transactionCount" (selectionChange)="onItemCountSelected()">
         <mat-option *ngFor="let option of itemCountOptions" [value]="option.value">
           {{option.viewValue}}
