--- a/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transaction-table/transaction-table.component.html
@@ -24,7 +24,7 @@
 
   <ng-container matColumnDef="timestamp">
     <mat-header-cell *matHeaderCellDef mat-sort-header>
-      <mat-icon>schedule</mat-icon>&nbsp;Date
+      <mat-icon>schedule</mat-icon>&nbsp;{{"date" | i18n}}
     </mat-header-cell>
     <mat-cell
       *matCellDef="let transaction"
