--- a/lib/packages/http/README.md.hbs
+++ b/lib/packages/http/README.md.hbs
@@ -4,6 +4,10 @@ Generic HTTP client that is used as a network provider for @burst/core.
 
 ## Installation
 
+`@burstjs/http` can be used with NodeJS or Web. Two formats are available
+
+### Using with NodeJS and/or modern web frameworks
+
 Install using [npm](https://www.npmjs.org/):
 
 ```
@@ -15,6 +19,45 @@ or using [yarn](https://yarnpkg.com/):
 ``` yarn
 yarn add @burstjs/http
 ```
+
+#### Example
+
+```js
+import {HttpImpl} from '@burstjs/http'
+
+try{
+    const client = new HttpImpl('https://jsonplaceholder.typicode.com/');
+    const response = client.get('/todos/1')
+    console.log(response)
+}
+catch(httpError){
+    console.error(httpError.message)
+}
+
+```
+
+### Using in classic `<script>`
+
+Each package is available as bundled standalone library using IIFE.
+This way _burstJS_ can be used also within `<script>`-Tags.
+This might be useful for Wordpress and/or other PHP applications.
+
+Just import the package using the HTML `<script>` tag.
+
+`<script src='https://cdn.jsdelivr.net/npm/@burstjs/http/dist/burstjs.http.min.js'></script>`
+
+#### Example
+
+```js
+const client = new b$http.HttpImpl('https://jsonplaceholder.typicode.com/');
+client.get('/todos/1').then(console.log)
+```
+
+See more here:
+
+[@burstjs/http Online Documentation](https://burstappsteam.org/phoenix/modules/http.html)
+
+---
 
 ## API Reference
 {{>main}}
