fix(messages): add button, cleanup PIN entry

--- a/web/angular-wallet/src/app/main/messages/sidenavs/left/message/message.component.scss
+++ b/web/angular-wallet/src/app/main/messages/sidenavs/left/message/message.component.scss
@@ -53,6 +53,9 @@ message-sidenav {
                 font-weight: 300;
                 height: 88px;
                 line-height: 88px;
+                button {
+                    margin-left:auto;
+                }
             }
 
             .contact {
