--- a/web/angular-wallet/src/app/main/messages/message-view/message-view.component.html
+++ b/web/angular-wallet/src/app/main/messages/message-view/message-view.component.html
@@ -81,15 +81,16 @@
 
         <div class="bubble">
           <div class="message encrypted" *ngIf="message.encryptedMessage && !message.message">
-            <div *ngIf="!showPin">
-              <mat-icon class="s-16 lock" (click)="showPin=true">lock</mat-icon>
+            <div *ngIf="!showPin[message.timestamp]">
+              <mat-icon class="s-16 lock" (click)="showPin[message.timestamp]=true">lock</mat-icon>
             </div>
-            <div *ngIf="showPin">
-              <mat-form-field>
-                <input matInput type="password" [(ngModel)]="pin" name="pin" placeholder="{{ 'input_pin' | i18n }}">
-              </mat-form-field>
-              <button type="submit" class="mr-8" mat-button color="primary"
-                      (click)="submitPinPrompt($event)">{{ "submit" | i18n }}</button>
+            <div *ngIf="showPin[message.timestamp]">
+              <form (ngSubmit)="submitPinPrompt($event)">
+                <mat-form-field>
+                  <input matInput type="password" [(ngModel)]="pin" name="pin" placeholder="{{ 'input_pin' | i18n }}">
+                </mat-form-field>
+                <button type="submit" class="mr-8" mat-button color="primary">{{ "submit" | i18n }}</button>
+              </form>
             </div>
           </div>
           <div class="message">{{message.message}}</div>
