--- a/web/angular-wallet/src/app/main/messages/sidenavs/left/message/message.component.html
+++ b/web/angular-wallet/src/app/main/messages/sidenavs/left/message/message.component.html
@@ -34,9 +34,11 @@
 
         <!-- CHATS LIST-->
         <div class="message-list" fxLayout="column">
-
             <div matSubheader *ngIf="(messages | filter: searchText).length > 0">
-                Messages
+                {{ 'messages' | i18n }}
+                <button mat-icon-button color="primary" (click)="startMessage()">
+                    <mat-icon>add</mat-icon> 
+                </button>
             </div>
 
             <button mat-button class="contact" *ngFor="let message of messages | filter: searchText"
