--- a/web/angular-wallet/src/app/main/messages/sidenavs/left/message/message.component.html
+++ b/web/angular-wallet/src/app/main/messages/sidenavs/left/message/message.component.html
@@ -69,7 +69,7 @@
             </button>
 
             <div *ngIf="(messages | filter: searchText).length === 0">
-                <div matSubheader>No results found.</div>
+                <div matSubheader>{{ 'no_messages_available' | i18n }}</div>
 
                 <div class="new-message">
                   <button class="mr-8" mat-raised-button mat-button color="primary"
