simple type mappings complete

--- a/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-details.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-details.component.html
@@ -4,7 +4,7 @@
 >
   <div class="info table">
     <div class="row" *ngFor="let row of detailsData; trackBy: trackRows">
-      <div class="label">{{ getFieldNameFromField(row.k) | i18n }}</div>
+      <div class="label">{{row.l | i18n}}</div>
       <div class="value">
         <app-transaction-row-value-cell
           [value]="row.v"
