fixed message encryption for tx details

--- a/web/angular-wallet/src/app/components/page/page.component.scss
+++ b/web/angular-wallet/src/app/components/page/page.component.scss
@@ -27,7 +27,7 @@
         margin: 0;
         box-shadow: none;
         border-radius: 0;
-        padding: 0;
+        padding: 8px;
       }
     }
 
