--- a/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-details.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-details.component.html
@@ -8,11 +8,12 @@
       <div class="value">
         <app-transaction-row-value-cell
           [value]="row.v"
-          [senderPublicKeyHex]="(currentAccountIsSender())
-            ? recipient.publicKey
-            : transaction.senderPublicKey">
+          [transaction]="transaction">
         </app-transaction-row-value-cell>
       </div>
     </div>
   </div>
 </app-page>
+<!--          [senderPublicKeyHex]="(currentAccountIsSender())-->
+<!--            ? recipient.publicKey-->
+<!--            : transaction.senderPublicKey">-->
