--- a/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-row-value-cell/transaction-row-value-cell.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-row-value-cell/transaction-row-value-cell.component.html
@@ -1,25 +1,36 @@
-<div [ngSwitch]="valueType">
+<div [ngSwitch]="value.type">
+
   <div *ngSwitchCase="'Message'">{{value.data.message}}</div>
-  <div *ngSwitchCase="'EncryptedMessage'">
-    <mat-icon class="s-16 lock">lock</mat-icon>
+
+  <div *ngSwitchCase="'EncryptedMessage'" class="encrypted-message">
+    <mat-icon class="mr-16 s-16 lock">lock</mat-icon>
     <div *ngIf="decryptedMessage">{{decryptedMessage}}</div>
     <div *ngIf="!decryptedMessage">
       <mat-form-field>
         <input matInput [(ngModel)]="pin" type="password" name="pin" placeholder="{{ 'input_pin' | i18n }}">
       </mat-form-field>
-      <button type="submit" class="mr-8" mat-button color="primary"
-      (click)="submitPinPrompt($event)">{{ "submit" | i18n }}</button>
+      <button type="submit"
+              class="mr-8"
+              mat-button
+              color="primary"
+              (click)="decrypt($event)">
+        {{ "decrypt" | i18n }}
+      </button>
     </div>
   </div>
+
   <div *ngSwitchCase="'AccountAddress'">
     <a [routerLink]="['/account', convertAddressToNumericId(value.data)]">{{value.data}}</a>
   </div>
+
   <div *ngSwitchCase="'AccountId'">
     <a [routerLink]="['/account', value.data]">{{value.data}}</a>
   </div>
+
   <div *ngSwitchCase="'BlockId'">
     <a [routerLink]="['/blocks/block', value.data]">{{value.data}}</a>
   </div>
+
   <div *ngSwitchCase="'Asset'">
     <table>
       <tr>
@@ -32,11 +43,25 @@
       </tr>
     </table>
   </div>
+
   <div *ngSwitchCase="'Transactions'">
       <span *ngFor="let v of value.data" class="transaction chip">
         <a [routerLink]="['/transactions/transaction', v]">{{v}}</a>
       </span>
   </div>
-  <div *ngSwitch="'Date'">{{value.data | date:'MMM d, y, h:mm:ss'}}</div>
+
+  <div *ngSwitchCase="'Date'">{{value.data | date:'MMM d, y, h:mm:ss'}}</div>
+
+  <div *ngSwitchCase="'AccountInfo'">{{value.data.name}} - {{value.data.description}}</div>
+
+  <div *ngSwitchCase="'MultiSameOutCreation'">
+    <label>{{'recipients' | i18n}}</label>
+    <div class="address-list">
+      <span *ngFor="let accountId of value.data.recipients" class="chip">
+        <a [routerLink]="['/account', accountId]">{{accountId}}</a>
+      </span>
+    </div>
+  </div>
+
   <div *ngSwitchDefault>{{value.data | i18n}}</div>
 </div>
