layout and translation refinements

--- a/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-row-value-cell/transaction-row-value-cell.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-row-value-cell/transaction-row-value-cell.component.html
@@ -44,6 +44,7 @@
     </table>
   </div>
 
+  <!-- for block -->
   <div *ngSwitchCase="'Transactions'">
       <span *ngFor="let v of value.data" class="transaction chip">
         <a [routerLink]="['/transactions/transaction', v]">{{v}}</a>
@@ -58,7 +59,16 @@
     <label>{{'recipients' | i18n}}</label>
     <div class="address-list">
       <span *ngFor="let accountId of value.data.recipients" class="chip">
-        <a [routerLink]="['/account', accountId]">{{accountId}}</a>
+        <a [routerLink]="['/account', accountId]">{{convertNumericIdToAddress(accountId)}}</a>
+      </span>
+    </div>
+  </div>
+
+  <div *ngSwitchCase="'MultiOutCreation'">
+    <label>{{'payments' | i18n}}</label>
+    <div class="address-list">
+      <span *ngFor="let payment of value.data.recipients" class="chip">
+        <a [routerLink]="['/account', payment[0]]">{{convertNQTStringToNumber(payment[1])}} BURST</a>
       </span>
     </div>
   </div>
