--- a/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-row-value-cell/transaction-row-value-cell.component.scss
+++ b/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-row-value-cell/transaction-row-value-cell.component.scss
@@ -17,7 +17,7 @@
     padding: 1px 5px;
     line-height: 1.5em;
     font-size: 12px;
-    margin-right: 5px;
+    margin: 4px 4px 0 0;
   }
 
   .chip a {
@@ -26,6 +26,8 @@
 
   .address-list {
     max-height: 200px;
+    flex-wrap: wrap;
+    display: flex;
   }
 
 }
