removed cell for block for now

--- a/web/angular-wallet/src/app/main/blocks/block-details/block-details.component.html
+++ b/web/angular-wallet/src/app/main/blocks/block-details/block-details.component.html
@@ -24,7 +24,7 @@
       <tr *ngFor="let row of getDetailsData()">
         <th>{{ row[0] | i18n }}</th>
         <td>
-          <app-transaction-row-value-cell [value]="row[1]" [key]="row[0]"></app-transaction-row-value-cell>
+<!--          <app-transaction-row-value-cell [value]="row[1]" [key]="row[0]"></app-transaction-row-value-cell>-->
         </td>
       </tr>
     </table>
