Finalized Block Details

--- a/web/angular-wallet/src/app/components/page/page.component.html
+++ b/web/angular-wallet/src/app/components/page/page.component.html
@@ -18,6 +18,7 @@
         <span class="secondary-text">{{title}}</span>
       </div>
       <div class="h1 mt-16">{{title}}</div>
+      <div class="h3 mt-16">{{subtitle}}</div>
     </div>
   </div>
 
