--- a/web/angular-wallet/src/app/main/blocks/block-details/block-row-value-cell/block-row-value-cell.component.scss
+++ b/web/angular-wallet/src/app/main/blocks/block-details/block-row-value-cell/block-row-value-cell.component.scss
@@ -24,10 +24,13 @@
     color: #fff;
   }
 
-  .address-list {
-    max-height: 200px;
+  .chip-list {
+    max-height: 120px;
+    overflow-y: auto;
     flex-wrap: wrap;
     display: flex;
+    border: 1px solid lightgray;
+    border-radius: 4px;
+    padding: 0 4px 4px 4px;
   }
-
 }
