--- a/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-details.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-details.component.html
@@ -1,4 +1,5 @@
 <app-page [title]="'transaction_details' | i18n"
+          [subtitle]="transaction.transaction"
           [breadcrumbs]="[{label:'transactions' | i18n, path: '/transactions'}]"
           [wide]="true"
 >
