--- a/web/angular-wallet/src/app/main/blocks/block-details/block-row-value-cell/block-row-value-cell.component.html
+++ b/web/angular-wallet/src/app/main/blocks/block-details/block-row-value-cell/block-row-value-cell.component.html
@@ -14,47 +14,15 @@
     <a [routerLink]="['/blocks/block', value.data]">{{value.data}}</a>
   </div>
 
-  <div *ngSwitchCase="'Asset'">
-    <table>
-      <tr>
-        <th>{{ 'asset_name' | i18n }}</th>
-        <th>{{ 'quantity' | i18n }} (NQT)</th>
-      </tr>
-      <tr *ngFor="let v of value.data">
-        <td>{{v.asset}}</td>
-        <td>{{v.balanceQNT || v.unconfirmedBalanceQNT}}</td>
-      </tr>
-    </table>
-  </div>
-
-  <!-- for block -->
   <div *ngSwitchCase="'Transactions'">
+    <div class="chip-list">
       <span *ngFor="let v of value.data" class="transaction chip">
         <a [routerLink]="['/transactions/transaction', v]">{{v}}</a>
       </span>
+    </div>
   </div>
 
   <div *ngSwitchCase="'Date'">{{value.data | date:'MMM d, y, h:mm:ss'}}</div>
-
-  <div *ngSwitchCase="'AccountInfo'">{{value.data.name}} - {{value.data.description}}</div>
-
-  <div *ngSwitchCase="'MultiSameOutCreation'">
-    <label>{{'recipients' | i18n}}</label>
-    <div class="address-list">
-      <span *ngFor="let accountId of value.data.recipients" class="chip">
-        <a [routerLink]="['/account', accountId]">{{convertNumericIdToAddress(accountId)}}</a>
-      </span>
-    </div>
-  </div>
-
-  <div *ngSwitchCase="'MultiOutCreation'">
-    <label>{{'payments' | i18n}}</label>
-    <div class="address-list">
-      <span *ngFor="let payment of value.data.recipients" class="chip">
-        <a [routerLink]="['/account', payment[0]]">{{convertNQTStringToNumber(payment[1])}} BURST</a>
-      </span>
-    </div>
-  </div>
 
   <div *ngSwitchDefault>{{value.data | i18n}}</div>
 </div>
